--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ocean Merge</title>
-    <link rel="icon" href="image/fav.png" />
+    <title>Recipe Rescue</title>
+    <link rel="icon" href="img/favicon-500x500.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -28,7 +28,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
 
-  <body class="back-index">
+  <body class="back">
     <header class="header">
       <div class="header__background"></div>
       <nav class="navigation container">
@@ -36,19 +36,24 @@
           <li class="navigation__item">
             <a href="/" class="navigation__link">Home</a>
           </li>
-
-          <li class="navigation__item">
-            <a href="/#advantages" class="navigation__link">Feature Keys</a>
-          </li>
-
-          <li class="navigation__item">
-            <a href="/#about" class="navigation__link">About Us</a>
-          </li>
           <li class="navigation__item">
             <a href="/#gallery" class="navigation__link">Gallery</a>
           </li>
           <li class="navigation__item">
+            <a href="/#advantages" class="navigation__link">Advantages</a>
+          </li>
+
+          <li class="navigation__item">
             <a href="/#reviews" class="navigation__link">Reviews</a>
+          </li>
+          <li class="navigation__item">
+            <a href="/#about" class="navigation__link">About the Game</a>
+          </li>
+          <li class="navigation__item navigation__item-desk">
+            <a href="policy.html" class="navigation__link">Privacy Policy</a>
+          </li>
+          <li class="navigation__item navigation__item-desk">
+            <a href="terms.html" class="navigation__link">Terms of Service</a>
           </li>
         </ul>
 
@@ -56,7 +61,7 @@
           <button type="button" class="header__icon-button" data-menu-button>
             <img
               class="header__icon header__icon--menu"
-              src="image/Icon.png"
+              src="img/Burger-icon.png"
               alt=""
             />
             <svg class="header__icon header__icon--close close">
@@ -71,14 +76,20 @@
       <section class="home" id="home">
         <div class="home__wrapper container">
           <div class="home__container-top">
+            <img
+              class="home__title-image"
+              src="img/home/Section-1-Hero.png"
+              alt=""
+            />
+
             <a
               class="home__google-button_link"
-              href="https://play.google.com/store/apps/details?id=com.sheepyard.ocean.merge.match.magic"
+              href="https://play.google.com/store/apps/details?id=air.com.idreaminteractive.reciperescue"
               target="_blank"
             >
               <img
                 class="home__google-button_image"
-                src="./image/home/play.png"
+                src="./img/home/phone-button.png"
                 alt=""
               />
             </a>
@@ -86,229 +97,151 @@
         </div>
       </section>
 
-      <section class="advantages" id="advantages">
-        <img
-          class="advantages-title-photo"
-          src="image//advantages/feature keys.png"
-          alt=""
-        />
-        <h2 class="visually-hidden">Advantages</h2>
+      <section class="reviews" id="gallery">
+        <h2 class="section--title reviews-title">Gallery</h2>
 
-        <div class="advantages__container">
-          <ul data-aos="fade-down" class="advantages__list">
-            <li class="advantages__item">
+        <div class="reviews__container">
+          <ul data-aos="fade-down" class="gallery__list">
+            <li class="gallery__item">
               <img
-                class="advantages-avatar"
-                src="./image/advantages/Card.png"
-                alt="User Avatar"
+                class="gallery__image"
+                src="./img/gallery/image1.png"
+                alt=""
               />
             </li>
-            <li class="advantages__item">
+            <li class="gallery__item">
               <img
-                class="advantages-avatar"
-                src="./image/advantages/Card (1).png"
-                alt="User Avatar"
+                class="gallery__image"
+                src="./img/gallery/image2.png"
+                alt=""
               />
             </li>
-            <li class="advantages__item">
+            <li class="gallery__item">
               <img
-                class="advantages-avatar"
-                src="./image/advantages/Card (2).png"
-                alt="User Avatar"
+                class="gallery__image"
+                src="./img/gallery/image3.png"
+                alt=""
               />
             </li>
-            <li class="advantages__item">
+            <li class="gallery__item">
               <img
-                class="advantages-avatar"
-                src="./image/advantages/Card (3).png"
-                alt="User Avatar"
-              />
-            </li>
-            <li class="advantages__item">
-              <img
-                class="advantages-avatar"
-                src="./image/advantages/Card (4).png"
-                alt="User Avatar"
-              />
-            </li>
-            <li class="advantages__item">
-              <img
-                class="advantages-avatar"
-                src="./image/advantages/Card (5).png"
-                alt="User Avatar"
-              />
-            </li>
-            <li class="advantages__item">
-              <img
-                class="advantages-avatar"
-                src="./image/advantages/Card (6).png"
-                alt="User Avatar"
-              />
-            </li>
-            <li class="advantages__item">
-              <img
-                class="advantages-avatar"
-                src="./image/advantages/Card (7).png"
-                alt="User Avatar"
+                class="gallery__image"
+                src="./img/gallery/image4.png"
+                alt=""
               />
             </li>
           </ul>
-        </div>
-        <div class="gallery-button-container">
-          <button class="gallery-button advantages__list-left">
-            <img class="gallery-button-icon" src="image/Icon (2).png" alt="" />
+
+          <button class="reviews__button--right gallery__button">
+            <img
+              class="reviews__button-icon"
+              src="./img/gallery/Controll.png"
+              alt=""
+            />
           </button>
-          <button class="gallery-button advantages__list-right">
-            <img class="gallery-button-icon" src="image/Icon (1).png" alt="" />
+        </div>
+
+        <div class="reviews__button-container">
+          <button class="reviews__button--right">
+            <img
+              class="reviews__button-icon"
+              src="./img/gallery/Controll.png"
+              alt=""
+            />
           </button>
         </div>
       </section>
 
-      <section class="about-one" id="about">
+      <section class="advantages" id="advantages">
+        <h2 class="advantages-title">Advantages</h2>
+
         <div data-aos="fade-down" class="advantages__container">
-          <img class="about-one-image" src="image/about/about us.png" alt="" />
+          <img class="advantages-image" src="img/adv/Frame 147.png" alt="" />
           <img
-            class="about-one-image-desk"
-            src="image/about/about us (1).png"
+            class="advantages-image-desk"
+            src="img/adv/Secrion-3-Advantages.png"
             alt=""
           />
         </div>
       </section>
+
+      <section class="reviews" id="reviews">
+        <div data-aos="fade-down" class="advantages__container">
+          <img
+            class="reviews-image"
+            src="img/reviews/Secrion-4-Reviews.png"
+            alt=""
+          />
+          <img
+            class="reviews-image-desk"
+            src="img/reviews/Secrion-4-Reviews (1).png"
+            alt=""
+          />
+        </div>
+      </section>
+      <section class="about-one" id="about">
+        <div data-aos="fade-down" class="advantages__container">
+          <img
+            class="about-one-image"
+            src="img/about-one/Secrion-5-About the game.png"
+            alt=""
+          />
+          <img
+            class="about-one-image-desk"
+            src="img//about-one/Secrion-5-About the game (1).png"
+            alt=""
+          />
+        </div>
+      </section>
+
+      <section class="about">
+        <h2 class="about__title">Ready to dive into a culinary adventure?</h2>
+        <div class="about__wrapper container">
+          <div class="about__wrapper--top">
+            <p class="about__text-bold">
+              Download "Recipe Rescue" now and start your journey in the
+              kitchen!
+            </p>
+            <p class="about__text">
+              Solve challenging puzzles, save delicious recipes, and discover
+              the joy of cooking.
+            </p>
+            <p class="about__text">
+              With vibrant graphics and endless fun, "Recipe Rescue" is your
+              ideal game for food lovers.
+            </p>
+            <p class="about__text">
+              Don’t miss out on the excitement – download today and let the
+              cooking adventure begin!
+            </p>
+          </div>
+          <div>
+            <img class="about-image-one" src="img/about/Image.png" alt="" />
+            <a
+              class="about__image-wrapper"
+              href="https://play.google.com/store/apps/details?id=air.com.idreaminteractive.reciperescue"
+              target="_blank"
+            >
+              <img
+                class="about-image-button"
+                src="./img/home/phone-button.png"
+                alt=""
+              />
+            </a>
+          </div>
+        </div>
+      </section>
     </main>
-
-    <section class="gallery" id="gallery">
-      <img class="gallery-title-photo" src="image/gallery/Gallery.png" alt="" />
-      <h2 class="visually-hidden">Advantages</h2>
-
-      <div class="gallery__container">
-        <ul data-aos="fade-down" class="gallery__list">
-          <li class="gallery__item">
-            <img
-              class="gallery-avatar"
-              src="./image/gallery/1.png"
-              alt="User Avatar"
-            />
-          </li>
-          <li class="gallery__item">
-            <img
-              class="gallery-avatar"
-              src="./image/gallery/2.png"
-              alt="User Avatar"
-            />
-          </li>
-          <li class="gallery__item">
-            <img
-              class="gallery-avatar"
-              src="./image/gallery/3.png"
-              alt="User Avatar"
-            />
-          </li>
-          <li class="gallery__item">
-            <img
-              class="gallery-avatar"
-              src="./image/gallery/4.png"
-              alt="User Avatar"
-            />
-          </li>
-          <li class="gallery__item">
-            <img
-              class="gallery-avatar"
-              src="./image/gallery/5.png"
-              alt="User Avatar"
-            />
-          </li>
-        </ul>
-      </div>
-      <div class="gallery-button-container">
-        <button class="gallery-button gallery__list-left">
-          <img class="gallery-button-icon" src="image/Icon (2).png" alt="" />
-        </button>
-        <button class="gallery-button gallery__list-right">
-          <img class="gallery-button-icon" src="image/Icon (1).png" alt="" />
-        </button>
-      </div>
-    </section>
-
-    <section class="reviews" id="reviews">
-      <img
-        class="reviews-title-photo"
-        src="image//reviews/reviews.png"
-        alt=""
-      />
-      <h2 class="visually-hidden">Advantages</h2>
-
-      <div class="reviews__container">
-        <ul data-aos="fade-down" class="reviews__list">
-          <li class="reviews__item">
-            <img
-              class="reviews-avatar"
-              src="./image/reviews/Review.png"
-              alt="User Avatar"
-            />
-          </li>
-          <li class="reviews__item">
-            <img
-              class="reviews-avatar"
-              src="./image/reviews//Review (1).png"
-              alt="User Avatar"
-            />
-          </li>
-          <li class="reviews__item">
-            <img
-              class="reviews-avatar"
-              src="./image/reviews//Review (2).png"
-              alt="User Avatar"
-            />
-          </li>
-          <li class="reviews__item">
-            <img
-              class="reviews-avatar"
-              src="./image/reviews//Review (3).png"
-              alt="User Avatar"
-            />
-          </li>
-          <li class="reviews__item">
-            <img
-              class="reviews-avatar"
-              src="./image/reviews//Review (4).png"
-              alt="User Avatar"
-            />
-          </li>
-          <li class="reviews__item">
-            <img
-              class="reviews-avatar"
-              src="./image/reviews//Review (5).png"
-              alt="User Avatar"
-            />
-          </li>
-        </ul>
-      </div>
-      <div class="gallery-button-container">
-        <button class="gallery-button reviews__list-left">
-          <img class="gallery-button-icon" src="image/Icon (2).png" alt="" />
-        </button>
-        <button class="gallery-button reviews__list-right">
-          <img class="gallery-button-icon" src="image/Icon (1).png" alt="" />
-        </button>
-      </div>
-    </section>
 
     <footer class="footer">
       <div class="footer-container">
+        <p class="footer-copyright">
+          All rights reserved coolprostart.com | 2024
+        </p>
         <div class="footer-wrapper">
-          <a class="footer-text" href="policy.html">
-            <img
-              src="/image/privacy-terms/Privacy policy mobile (1).png"
-              alt="Privacy Policy"
-            />
-          </a>
-
-          <a class="footer-text" href="terms.html">
-            <img
-              src="/image/privacy-terms/terms mobile.png"
-              alt="Terms of Service"
-            />
-          </a>
+          <a class="footer-text" href="policy.html">Privacy Policy</a>
+          <a class="footer-texts"> / </a>
+          <a class="footer-text" href="terms.html">Terms of Service</a>
         </div>
       </div>
     </footer>
