--- a/policy.html
+++ b/policy.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ocean Merge</title>
-    <link rel="icon" href="image/fav.png" />
+    <title>Recipe Rescue</title>
+    <link rel="icon" href="img/favicon-500x500.png" />
     <link rel="stylesheet" type="text/css" href="slick/slick.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
@@ -32,59 +32,29 @@
   <body class="back">
     <header class="header">
       <div class="header__background"></div>
-      <nav class="navigation container">
-        <ul class="navigation__list">
-          <li class="navigation__item">
-            <a href="/" class="navigation__link">Home</a>
-          </li>
-
-          <li class="navigation__item">
-            <a href="/#advantages" class="navigation__link">Feature Keys</a>
-          </li>
-
-          <li class="navigation__item">
-            <a href="/#about" class="navigation__link">About Us</a>
-          </li>
-          <li class="navigation__item">
-            <a href="/#gallery" class="navigation__link">Gallery</a>
-          </li>
-          <li class="navigation__item">
-            <a href="/#reviews" class="navigation__link">Reviews</a>
+      <nav class="navigation container nav-policy-terms">
+        <ul class="policy-terms-list nav-policy-terms">
+          <li class="nav-policy-terms-item active">
+            <svg class="header-icon-policy">
+              <use href="./img/sprite.svg#icon-arrow-left"></use>
+            </svg>
+            <a href="/" class="navigation-link">Go Back Home</a>
           </li>
         </ul>
-
-        <div class="header__button-wrapper">
-          <button type="button" class="header__icon-button" data-menu-button>
-            <img
-              class="header__icon header__icon--menu"
-              src="image/Icon.png"
-              alt=""
-            />
-            <svg class="header__icon header__icon--close close">
-              <use href="./img/sprite.svg#icon-cancel"></use>
-            </svg>
-          </button>
-        </div>
       </nav>
     </header>
 
     <main class="policy">
       <section>
         <div class="policy-terms-container">
-          <img
-            class="policy-terms-title-photo"
-            src="image/privacy-terms//Privacy policy mobile (1).png"
-            alt=""
-          />
           <h1 class="policy-terms-title">Privacy Policy</h1>
           <p class="policy-terms-text-top-one">Last updated: 07.10.2024</p>
-          <p class="policy-terms-text-top-one">
-            This Privacy Policy explains how we collect, use, and share your
-            information when you play our game or visit
-            <span class="terms-list-bold">joyadventurestar.com</span> .
+          <p class="policy-terms-text-top-two">
+            This Privacy Policy explains how we collect, use, and share your
+            information when you play our game or visit coolplaymaster.com.
           </p>
 
-          <h2 class="policy-terms-text text-bold">1. Information We Collect</h2>
+          <h2 class="policy-terms-text text-bold">Information We Collect</h2>
           <p class="policy-terms-text-one">
             We may collect the following types of information when you use our
             game or website:
@@ -92,30 +62,27 @@
           <ul class="terms-list">
             <li>
               <span class="terms-list-bold">Personal Data:</span>
-              We do not collect personal information such as your name, email
-              address, or phone number unless you provide it voluntarily (e.g.,
-              by signing up for a newsletter on 
-              <span class="terms-list-bold">joyadventurestar.com</span> ).
+              We do not collect personal information such as your name, email
+              address, or phone number unless you provide it voluntarily (e.g.,
+              by signing up for a newsletter on coolplaymaster.com).
             </li>
             <li>
               <span class="terms-list-bold">Usage Data:</span>
-              We collect data related to your use of the game and
-              <span class="terms-list-bold">joyadventurestar.com</span>,
-              including gameplay statistics, in-app purchases, device
-              information (such as device ID and operating system), and website
-              browsing behavior.
+              We collect data related to your use of the game and
+              coolplaymaster.com, including gameplay statistics, in-app
+              purchases, device information (such as device ID and operating
+              system), and website browsing behavior.
             </li>
             <li>
               <span class="terms-list-bold">Location Data:</span>
-              We may collect general location data (e.g., country or region)
-              based on your IP address when accessing
-              <span class="terms-list-bold">joyadventurestar.com</span>
-              or playing the game.
+              Location Data: We may collect general location data (e.g., country
+              or region) based on your IP address when accessing
+              coolplaymaster.com or playing the game.
             </li>
           </ul>
 
           <h2 class="policy-terms-text text-bold">
-            2. How We Use Your Information
+            How We Use Your Information
           </h2>
           <p class="policy-terms-text-one">We use the collected data to:</p>
           <ul class="terms-list">
@@ -132,70 +99,63 @@
               platforms.
             </li>
             <li>
-              Provide you with relevant offers or promotions through
-              <span class="terms-list-bold">joyadventurestar.com</span>
-              if applicable.
+              Provide you with relevant offers or promotions through
+              coolplaymaster.com if applicable.
             </li>
           </ul>
 
-          <h2 class="policy-terms-text text-bold">3. Third-Party Services</h2>
+          <h2 class="policy-terms-text text-bold">Third-Party Services</h2>
           <p class="policy-terms-text-one">
-            We may use third-party services (such as analytics tools,
-            advertising networks, or payment processors) that collect and
-            process data to provide better services through the game or <span
-              class="terms-list-bold"
-              >joyadventurestar.com</span
-            >. These third parties may have access to some of your non-personal
-            data, like device information, usage statistics, or browsing
-            behaviour, but they do not collect personal information unless you
-            provide it directly to them.
+            We may use third-party services (such as analytics tools,
+            advertising networks, or payment processors) that collect and
+            process data to provide better services through the game or
+            coolprostart.com. These third parties may have access to some of
+            your non-personal data, like device information, usage statistics,
+            or browsing behaviour, but they do not collect personal information
+            unless you provide it directly to them.
           </p>
 
           <h2 class="policy-terms-text text-bold">
-            4. Cookies and Tracking Technologies
+            Cookies and Tracking Technologies
           </h2>
           <p class="policy-terms-text-one">
-            <span class="terms-list-bold">joyadventurestar.com</span> may use
-            cookies and similar technologies to enhance user experience and
-            track website usage. You can control or disable cookies through your
-            browser settings, but this may affect the functionality of the
-            website.
+            coolprostart.com may use cookies and similar technologies to enhance
+            user experience and track website usage. You can control or disable
+            cookies through your browser settings, but this may affect the
+            functionality of the website.
           </p>
 
-          <h2 class="policy-terms-text text-bold">5. Data Security</h2>
+          <h2 class="policy-terms-text text-bold">Data Security</h2>
           <p class="policy-terms-text-one">
-            We take reasonable steps to protect the information we collect.
-            However, no method of transmission over the Internet or method
-            of electronic storage is 100% secure, and we cannot guarantee
-            absolute security.
+            We take reasonable steps to protect the information we collect.
+            However, no method of transmission over the Internet or method of
+            electronic storage is 100% secure, and we cannot guarantee absolute
+            security
           </p>
 
-          <h2 class="policy-terms-text text-bold">6. Children’s Privacy</h2>
+          <h2 class="policy-terms-text text-bold">Children’s Privacy</h2>
           <p class="policy-terms-text-one">
-            Our game and website are not intended for children under the age
-            of 13. We do not knowingly collect any personal information from
-            children. If you believe we have unintentionally collected data from
-            a child, please contact us, and we will delete the information.
+            Our game and website are not intended for children under the age of
+            13. We do not knowingly collect any personal information from
+            children. If you believe we have unintentionally collected data from
+            a child, please contact us, and we will delete the information.
           </p>
 
-          <h2 class="policy-terms-text text-bold">
-            7. Links to Other Websites
-          </h2>
+          <h2 class="policy-terms-text text-bold">Links to Other Websites</h2>
           <p class="policy-terms-text-one">
-            <span class="terms-list-bold">joyadventurestar.com</span> may
-            contain links to third-party websites. We are not responsible for
-            the privacy practices or content of these external websites.
-            We encourage you to review their privacy policies.
+            coolplaymaster.com may contain links to third-party websites. We are
+            not responsible for the privacy practices or content of these
+            external websites. We encourage you to review their privacy
+            policies.
           </p>
 
-          <h2 class="policy-terms-text text-bold">8. Changes to This Policy</h2>
+          <h2 class="policy-terms-text text-bold">Changes to This Policy</h2>
           <p class="policy-terms-text-one">
-            We may update this Privacy Policy from time to time. If we make any
-            significant changes, we will notify you through the game,
-            <span class="terms-list-bold">joyadventurestar.com</span>, or other
-            appropriate means. Your continued use of the game or website after
-            changes have been made constitutes acceptance of the new Privacy
-            Policy.
+            We may update this Privacy Policy from time to time. If we make any
+            significant changes, we will notify you through the game,
+            coolplaymaster.com, or other appropriate means. Your continued use
+            of the game or website after changes have been made constitutes
+            acceptance of the new Privacy Policy.
           </p>
 
           <h2 class="policy-terms-text text-bold">Contact Us</h2>
@@ -212,20 +172,13 @@
 
     <footer class="footer">
       <div class="footer-container">
+        <p class="footer-copyright">
+          All rights reserved coolprostart.com | 2024
+        </p>
         <div class="footer-wrapper">
-          <a class="footer-text" href="policy.html">
-            <img
-              src="/image/privacy-terms/Privacy policy mobile (1).png"
-              alt="Privacy Policy"
-            />
-          </a>
-
-          <a class="footer-text" href="terms.html">
-            <img
-              src="/image/privacy-terms/terms mobile.png"
-              alt="Terms of Service"
-            />
-          </a>
+          <a class="footer-text" href="policy.html">Privacy Policy</a>
+          <a class="footer-texts"> / </a>
+          <a class="footer-text" href="terms.html">Terms of Service</a>
         </div>
       </div>
     </footer>
