--- a/terms.html
+++ b/terms.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ocean Merge</title>
-    <link rel="icon" href="image/fav.png" />
+    <title>Recipe Rescue</title>
+    <link rel="icon" href="img/favicon-500x500.png" />
     <link rel="stylesheet" type="text/css" href="slick/slick.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
@@ -32,97 +32,64 @@
   <body class="back">
     <header class="header">
       <div class="header__background"></div>
-      <nav class="navigation container">
-        <ul class="navigation__list">
-          <li class="navigation__item">
-            <a href="/" class="navigation__link">Home</a>
-          </li>
-
-          <li class="navigation__item">
-            <a href="/#advantages" class="navigation__link">Feature Keys</a>
-          </li>
-
-          <li class="navigation__item">
-            <a href="/#about" class="navigation__link">About Us</a>
-          </li>
-          <li class="navigation__item">
-            <a href="/#gallery" class="navigation__link">Gallery</a>
-          </li>
-          <li class="navigation__item">
-            <a href="/#reviews" class="navigation__link">Reviews</a>
+      <nav class="navigation container nav-policy-terms">
+        <ul class="policy-terms-list nav-policy-terms">
+          <li class="nav-policy-terms-item active">
+            <svg class="header-icon-policy">
+              <use href="./img/sprite.svg#icon-arrow-left"></use>
+            </svg>
+            <a href="/" class="navigation-link">Go Back Home</a>
           </li>
         </ul>
-
-        <div class="header__button-wrapper">
-          <button type="button" class="header__icon-button" data-menu-button>
-            <img
-              class="header__icon header__icon--menu"
-              src="image/Icon.png"
-              alt=""
-            />
-            <svg class="header__icon header__icon--close close">
-              <use href="./img/sprite.svg#icon-cancel"></use>
-            </svg>
-          </button>
-        </div>
       </nav>
     </header>
 
     <main class="policy">
       <section>
         <div class="policy-terms-container">
-          <img
-            class="policy-terms-title-photo"
-            src="image/privacy-terms/terms mobile.png"
-            alt=""
-          />
           <h1 class="policy-terms-title">Terms of Service</h1>
 
           <p class="policy-terms-text-top-one">Last updated: 07.10.2024</p>
           <p class="policy-terms-text-top-two">
-            Thank you for choosing to play our game, available on 
-            <span class="terms-list-bold">joyadventurestar.com</span>.
-            By downloading, accessing, or playing our game, you agree to these
-            Terms of Service. Please read them carefully.
+            Thank you for choosing to play our game, available on
+            coolprostart.com. By downloading, accessing, or playing our game,
+            you agree to these Terms of Service. Please read them carefully.
           </p>
 
-          <h2 class="policy-terms-text text-bold">1. Acceptance of Terms</h2>
+          <h2 class="policy-terms-text text-bold">Acceptance of Terms</h2>
           <ul class="policy-terms-text-one">
             <li>
-              By downloading or playing our game, visiting our website
-              <span class="terms-list-bold">joyadventurestar.com</span>,
-              or accessing related services, you agree to be bound by these
-              Terms. If you do not agree with any part of the Terms, please
-              do not use our services.
+              By downloading or playing our game, visiting our website
+              coolprostart.com, or accessing related services, you agree to be
+              bound by these Terms. If you do not agree with any part of the
+              Terms, please do not use our services.
             </li>
           </ul>
 
-          <h2 class="policy-terms-text text-bold">2. License to Use</h2>
+          <h2 class="policy-terms-text text-bold">License to Use</h2>
           <ul class="policy-terms-text-one">
             <li>
-              We grant you a personal, non-transferable, and non-exclusive
-              license to use the game on your device or through
-              <span class="terms-list-bold">joyadventurestar.com</span> for
-              personal, non-commercial use only. You may not copy, modify,
-              distribute, or sell any part of the game or the website without
+              We grant you a personal, non-transferable, and non-exclusive
+              license to use the game on your device or through coolprostart.com
+              for personal, non-commercial use only. You may not copy, modify,
+              distribute, or sell any part of the game or the website without
               our permission.
             </li>
           </ul>
 
           <h2 class="policy-terms-text text-bold">
-            3. In-App Purchases and Website Payments
+            In-App Purchases and Website Payments
           </h2>
           <p class="policy-terms-text-one">
-            Our game may include in-app purchases, and
-            <span class="terms-list-bold">joyadventurestar.com</span> may
-            provide access to related services or offers. By making a purchase,
-            you agree to pay the listed price for the item or service. All sales
-            are final, and refunds are subject to the policies of the platform
-            you use (e.g., Google Play Store or other payment providers linked
-            to  <span class="terms-list-bold">joyadventurestar.com</span>).
+            Our game may include in-app purchases, and coolprostart.com may
+            provide access to related services or offers. By making a purchase,
+            you agree to pay the listed price for the item or service. All sales
+            are final, and refunds are subject to the policies of the platform
+            you use (e.g., Google Play Store or other payment providers linked
+            to coolprostart.com).
           </p>
 
-          <h2 class="policy-terms-text text-bold">4. User Conduct</h2>
+          <h2 class="policy-terms-text text-bold">User Conduct</h2>
 
           <p class="policy-terms-text-one">
             While using the game or website, you agree to:
@@ -139,46 +106,36 @@
             </li>
           </ul>
 
-          <h2 class="policy-terms-text text-bold">
-            5. Updates and Modifications
-          </h2>
+          <h2 class="policy-terms-text text-bold">Updates and Modifications</h2>
           <p class="policy-terms-text-one">
-            We reserve the right to update or modify the game or website at any
-            time. This may include adding or removing features. Your continued
-            use of the game or 
-            <span class="terms-list-bold">joyadventurestar.com</span> after
-            an update constitutes your acceptance of the changes.
+            We reserve the right to update or modify the game or website at any
+            time. This may include adding or removing features. Your continued
+            use of the game or coolprostart.com after an update constitutes your
+            acceptance of the changes.
           </p>
 
-          <h2 class="policy-terms-text text-bold">6. Termination</h2>
+          <h2 class="policy-terms-text text-bold">Termination</h2>
           <p class="policy-terms-text-one">
             We may terminate or suspend your access to the game, website, or any
             related services at any time without prior notice if you violate
             these Terms.
           </p>
 
-          <h2 class="policy-terms-text text-bold">
-            7. Disclaimer of Warranties
-          </h2>
+          <h2 class="policy-terms-text text-bold">Disclaimer of Warranties</h2>
           <p class="policy-terms-text-one">
-            The game and
-            <span class="terms-list-bold">joyadventurestar.com</span> are
-            provided «as is» without warranties of any kind. We do not guarantee
-            that the game or website will be error-free, secure, or available
-            at all times.
+            The game and coolplaymaster.com are provided "as is" without
+            warranties of any kind. We do not guarantee that the game or website
+            will be error-free, secure, or available at all times.
           </p>
 
-          <h2 class="policy-terms-text text-bold">
-            8. Limitation of Liability
-          </h2>
+          <h2 class="policy-terms-text text-bold">Limitation of Liability</h2>
           <p class="policy-terms-text-one">
-            To the maximum extent permitted by law, we will not be liable for
-            any damages resulting from your use or inability to use the game,
-            <span class="terms-list-bold">joyadventurestar.com</span>,
-            or related services.
+            To the maximum extent permitted by law, we will not be liable for
+            any damages resulting from your use or inability to use the game,
+            coolplaymaster.com, or related services.
           </p>
 
-          <h2 class="policy-terms-text text-bold">9. Governing Law</h2>
+          <h2 class="policy-terms-text text-bold">Governing Law</h2>
           <p class="policy-terms-text-one">
             If you have any questions about this Privacy Policy, please contact
             us at
@@ -192,20 +149,13 @@
 
     <footer class="footer">
       <div class="footer-container">
+        <p class="footer-copyright">
+          All rights reserved coolprostart.com | 2024
+        </p>
         <div class="footer-wrapper">
-          <a class="footer-text" href="policy.html">
-            <img
-              src="/image/privacy-terms/Privacy policy mobile (1).png"
-              alt="Privacy Policy"
-            />
-          </a>
-
-          <a class="footer-text" href="terms.html">
-            <img
-              src="/image/privacy-terms/terms mobile.png"
-              alt="Terms of Service"
-            />
-          </a>
+          <a class="footer-text" href="policy.html">Privacy Policy</a>
+          <a class="footer-texts"> / </a>
+          <a class="footer-text" href="terms.html">Terms of Service</a>
         </div>
       </div>
     </footer>
