--- a/policy.html
+++ b/policy.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Recipe Rescue</title>
-    <link rel="icon" href="img/favicon-500x500.png" />
+    <title>Merge Wonder Park</title>
+    <link rel="icon" href="image/favicon-500x500.png" />
     <link rel="stylesheet" type="text/css" href="slick/slick.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
@@ -47,11 +47,16 @@
     <main class="policy">
       <section>
         <div class="policy-terms-container">
-          <h1 class="policy-terms-title">Privacy Policy</h1>
+          <h1 class="visually-hidden">Terms of Service</h1>
+          <img
+            class="policy-title-image"
+            src="image/policy-terms/Privacy Policy.png"
+            alt=""
+          />
           <p class="policy-terms-text-top-one">Last updated: 07.10.2024</p>
           <p class="policy-terms-text-top-two">
             This Privacy Policy explains how we collect, use, and share your
-            information when you play our game or visit coolplaymaster.com.
+            information when you play our game or visit proquestadventure.com.
           </p>
 
           <h2 class="policy-terms-text text-bold">Information We Collect</h2>
@@ -64,20 +69,20 @@
               <span class="terms-list-bold">Personal Data:</span>
               We do not collect personal information such as your name, email
               address, or phone number unless you provide it voluntarily (e.g.,
-              by signing up for a newsletter on coolplaymaster.com).
+              by signing up for a newsletter on proquestadventure.com).
             </li>
             <li>
               <span class="terms-list-bold">Usage Data:</span>
               We collect data related to your use of the game and
-              coolplaymaster.com, including gameplay statistics, in-app
+              proquestadventure.com, including gameplay statistics, in-app
               purchases, device information (such as device ID and operating
               system), and website browsing behavior.
             </li>
             <li>
               <span class="terms-list-bold">Location Data:</span>
-              Location Data: We may collect general location data (e.g., country
-              or region) based on your IP address when accessing
-              coolplaymaster.com or playing the game.
+              We may collect general location data (e.g., country or region)
+              based on your IP address when accessing proquestadventure.com or
+              playing the game.
             </li>
           </ul>
 
@@ -100,7 +105,7 @@
             </li>
             <li>
               Provide you with relevant offers or promotions through
-              coolplaymaster.com if applicable.
+              proquestadventure.com if applicable.
             </li>
           </ul>
 
@@ -109,20 +114,20 @@
             We may use third-party services (such as analytics tools,
             advertising networks, or payment processors) that collect and
             process data to provide better services through the game or
-            coolprostart.com. These third parties may have access to some of
-            your non-personal data, like device information, usage statistics,
-            or browsing behaviour, but they do not collect personal information
-            unless you provide it directly to them.
+            proquestadventure.com. These third parties may have access to some
+            of your non-personal data, like device information, usage
+            statistics, or browsing behaviour, but they do not collect personal
+            information unless you provide it directly to them.
           </p>
 
           <h2 class="policy-terms-text text-bold">
             Cookies and Tracking Technologies
           </h2>
           <p class="policy-terms-text-one">
-            coolprostart.com may use cookies and similar technologies to enhance
-            user experience and track website usage. You can control or disable
-            cookies through your browser settings, but this may affect the
-            functionality of the website.
+            proquestadventure.com may use cookies and similar technologies to
+            enhance user experience and track website usage. You can control or
+            disable cookies through your browser settings, but this may affect
+            the functionality of the website.
           </p>
 
           <h2 class="policy-terms-text text-bold">Data Security</h2>
@@ -143,8 +148,8 @@
 
           <h2 class="policy-terms-text text-bold">Links to Other Websites</h2>
           <p class="policy-terms-text-one">
-            coolplaymaster.com may contain links to third-party websites. We are
-            not responsible for the privacy practices or content of these
+            proquestadventure.com may contain links to third-party websites. We
+            are not responsible for the privacy practices or content of these
             external websites. We encourage you to review their privacy
             policies.
           </p>
@@ -153,8 +158,8 @@
           <p class="policy-terms-text-one">
             We may update this Privacy Policy from time to time. If we make any
             significant changes, we will notify you through the game,
-            coolplaymaster.com, or other appropriate means. Your continued use
-            of the game or website after changes have been made constitutes
+            proquestadventure.com, or other appropriate means. Your continued
+            use of the game or website after changes have been made constitutes
             acceptance of the new Privacy Policy.
           </p>
 
@@ -173,12 +178,12 @@
     <footer class="footer">
       <div class="footer-container">
         <p class="footer-copyright">
-          All rights reserved coolprostart.com | 2024
+          All rights reserved proquestadventure.com | 2024
         </p>
         <div class="footer-wrapper">
           <a class="footer-text" href="policy.html">Privacy Policy</a>
           <a class="footer-texts"> / </a>
-          <a class="footer-text" href="terms.html">Terms of Service</a>
+          <a class="footer-text" href="terms.html">Terms & Conditions</a>
         </div>
       </div>
     </footer>
