--- a/terms.html
+++ b/terms.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Recipe Rescue</title>
-    <link rel="icon" href="img/favicon-500x500.png" />
+    <title>Merge Wonder Park</title>
+    <link rel="icon" href="image/favicon-500x500.png" />
     <link rel="stylesheet" type="text/css" href="slick/slick.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
@@ -47,8 +47,12 @@
     <main class="policy">
       <section>
         <div class="policy-terms-container">
-          <h1 class="policy-terms-title">Terms of Service</h1>
-
+          <h1 class="visually-hidden">Terms of Service</h1>
+          <img
+            class="policy-terms-title-image"
+            src="image/policy-terms/Terms and Conditions (4).png"
+            alt=""
+          />
           <p class="policy-terms-text-top-one">Last updated: 07.10.2024</p>
           <p class="policy-terms-text-top-two">
             Thank you for choosing to play our game, available on
@@ -60,8 +64,8 @@
           <ul class="policy-terms-text-one">
             <li>
               By downloading or playing our game, visiting our website
-              coolprostart.com, or accessing related services, you agree to be
-              bound by these Terms. If you do not agree with any part of the
+              proquestadventure.com, or accessing related services, you agree to
+              be bound by these Terms. If you do not agree with any part of the
               Terms, please do not use our services.
             </li>
           </ul>
@@ -70,10 +74,10 @@
           <ul class="policy-terms-text-one">
             <li>
               We grant you a personal, non-transferable, and non-exclusive
-              license to use the game on your device or through coolprostart.com
-              for personal, non-commercial use only. You may not copy, modify,
-              distribute, or sell any part of the game or the website without
-              our permission.
+              license to use the game on your device or through
+              proquestadventure.com for personal, non-commercial use only. You
+              may not copy, modify, distribute, or sell any part of the game or
+              the website without our permission.
             </li>
           </ul>
 
@@ -81,12 +85,12 @@
             In-App Purchases and Website Payments
           </h2>
           <p class="policy-terms-text-one">
-            Our game may include in-app purchases, and coolprostart.com may
+            Our game may include in-app purchases, and proquestadventure.com may
             provide access to related services or offers. By making a purchase,
             you agree to pay the listed price for the item or service. All sales
             are final, and refunds are subject to the policies of the platform
             you use (e.g., Google Play Store or other payment providers linked
-            to coolprostart.com).
+            to proquestadventure.com).
           </p>
 
           <h2 class="policy-terms-text text-bold">User Conduct</h2>
@@ -110,8 +114,8 @@
           <p class="policy-terms-text-one">
             We reserve the right to update or modify the game or website at any
             time. This may include adding or removing features. Your continued
-            use of the game or coolprostart.com after an update constitutes your
-            acceptance of the changes.
+            use of the game or proquestadventure.com after an update constitutes
+            your acceptance of the changes.
           </p>
 
           <h2 class="policy-terms-text text-bold">Termination</h2>
@@ -123,7 +127,7 @@
 
           <h2 class="policy-terms-text text-bold">Disclaimer of Warranties</h2>
           <p class="policy-terms-text-one">
-            The game and coolplaymaster.com are provided "as is" without
+            The game and proquestadventure.com are provided "as is" without
             warranties of any kind. We do not guarantee that the game or website
             will be error-free, secure, or available at all times.
           </p>
@@ -150,12 +154,12 @@
     <footer class="footer">
       <div class="footer-container">
         <p class="footer-copyright">
-          All rights reserved coolprostart.com | 2024
+          All rights reserved proquestadventure.com | 2024
         </p>
         <div class="footer-wrapper">
           <a class="footer-text" href="policy.html">Privacy Policy</a>
           <a class="footer-texts"> / </a>
-          <a class="footer-text" href="terms.html">Terms of Service</a>
+          <a class="footer-text" href="terms.html">Terms & Conditions</a>
         </div>
       </div>
     </footer>
