--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
       rel="stylesheet"
     />
 
-    <!-- Add the slick-theme.css if you want default styling -->
+   
     <link
       rel="stylesheet"
       type="text/css"
       href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
     />
-    <!-- Add the slick-theme.css if you want default styling -->
+   
     <link
       rel="stylesheet"
       type="text/css"
@@ -229,7 +229,7 @@
         alt=""
       />
 
-      <div class="reviews__container">
+      <div class="gallery__container">
         <ul data-aos="fade-down" class="gallery__list">
           <li class="gallery__item">
             <img class="gallery__image" src="./image/gallery/img1.png" alt="" />
