--- a/policy.html
+++ b/policy.html
@@ -30,8 +30,8 @@
   </head>
 
   <body class="back">
-    <header class="header">
-      <div class="header__background"></div>
+    <header class="header header-policy-terms">
+      <div class="header-background"></div>
       <nav class="navigation container nav-policy-terms">
         <ul class="policy-terms-list nav-policy-terms">
           <li class="nav-policy-terms-item active">
