--- a/terms.html
+++ b/terms.html
@@ -30,7 +30,7 @@
   </head>
 
   <body class="back">
-    <header class="header">
+    <header class="header header-policy-terms">
       <div class="header__background"></div>
       <nav class="navigation container nav-policy-terms">
         <ul class="policy-terms-list nav-policy-terms">
