--- a/index.html
+++ b/index.html
@@ -24,13 +24,12 @@
       rel="stylesheet"
     />
 
-   
     <link
       rel="stylesheet"
       type="text/css"
       href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
     />
-   
+
     <link
       rel="stylesheet"
       type="text/css"
@@ -110,7 +109,7 @@
       <section class="advantages" id="advantages">
         <h2 class="visually-hidden">Advantages</h2>
 
-        <div data-aos="fade-down" class="advantages__container">
+        <div class="advantages__container">
           <img
             class="advantages-image"
             src="image/desc/Secrion-2-About the game.png"
@@ -127,7 +126,7 @@
       <section class="features" id="features">
         <h2 class="visually-hidden">features</h2>
 
-        <div data-aos="fade-down" class="features__container">
+        <div class="features__container">
           <img
             class="features-image"
             src="image/Features/Secrion-3-Features.png"
@@ -149,7 +148,7 @@
         />
 
         <div class="play__container">
-          <ul data-aos="fade-down" class="play__list">
+          <ul class="play__list">
             <li class="play__item">
               <img
                 class="play__image"
@@ -204,7 +203,7 @@
     <section class="features" id="faq">
       <h2 class="visually-hidden">faq</h2>
 
-      <div data-aos="fade-down" class="features__container">
+      <div class="features__container">
         <a href="policy.html">
           <img
             class="features-image"
@@ -230,7 +229,7 @@
       />
 
       <div class="gallery__container">
-        <ul data-aos="fade-down" class="gallery__list">
+        <ul class="gallery__list">
           <li class="gallery__item">
             <img class="gallery__image" src="./image/gallery/img1.png" alt="" />
           </li>
