--- a/index.html
+++ b/index.html
@@ -107,126 +107,265 @@
       </section>
 
       <section class="advantages" id="advantages">
-        <h2 class="visually-hidden">Advantages</h2>
-
-        <div class="advantages__container">
-          <img
-            class="advantages-image"
-            src="image/desc/Secrion-2-About the game.png"
-            alt=""
-          />
-          <img
-            class="advantages-image-desk"
-            src="image/desc/Secrion-2-About the game (1).png"
-            alt=""
-          />
+        <h2 class="advantages-title">Game Description</h2>
+        <img class="advantages-img" src="/image/desc/Screenshot.png" alt="" />
+        <div class="advantages-list">
+          <p class="advantages-text">
+            <span class="advantages-text-bold">Merge Wonder Park</span> is an
+            engaging "merge and build" game that invites players into a magical
+            world of adventures.
+          </p>
+          <p class="advantages-text">
+            Each new
+            <span class="advantages-text-bold">quest</span> presents exciting
+            <span class="advantages-text-bold">challenges</span> and unique
+            objectives that require creative thinking and strategic planning.
+          </p>
+          <p class="advantages-text">
+            With <span class="advantages-text-bold">numerous levels</span>,
+            interesting mechanics, and
+            <span class="advantages-text-bold">numerous levels</span>, Merge
+            Wonder Park offers players a unique and captivating gaming
+            experience.
+          </p>
+          <p class="advantages-text">
+            Players <span class="advantages-text-bold">collect</span> and
+            <span class="advantages-text-bold">merge</span> various items to
+            build their own park and unlock new opportunities.
+          </p>
         </div>
       </section>
 
       <section class="features" id="features">
-        <h2 class="visually-hidden">features</h2>
+        <h2 class="advantages-title">Unique Features</h2>
+        <p class="features-text">
+          Merge Wonder Park offers various game modes and objectives that differ
+          from traditional "merge" games, providing fresh and exciting
+          challenges.
+        </p>
 
-        <div class="features__container">
-          <img
-            class="features-image"
-            src="image/Features/Secrion-3-Features.png"
-            alt=""
-          />
-          <img
-            class="features-image-desk"
-            src="image/Features/Secrion-3-Features (1).png"
-            alt=""
-          />
+        <div class="card">
+          <div class="card-image">
+            <img src="/image/Features/img3.png" alt="Game Image" />
+          </div>
+          <div class="card-content">
+            <h3>Creative Challenges & Obstacles</h3>
+            <p>
+              Explore unique elements and obstacles that require creative
+              strategies to overcome.
+            </p>
+          </div>
+        </div>
+        <div class="card card-two">
+          <div class="card-image">
+            <img src="/image/Features/img4.png" alt="Game Image" />
+          </div>
+          <div class="card-content">
+            <h3>Power-Ups & Combos</h3>
+            <p>
+              Utilize a variety of power-ups and combos to successfully complete
+              challenging levels.
+            </p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="/image/Features/img5.png" alt="Game Image" />
+          </div>
+          <div class="card-content">
+            <h3>Regular Updates & Events</h3>
+            <p>
+              Regular updates add new levels, features, and special events,
+              keeping the gameplay experience fresh and engaging.
+            </p>
+          </div>
         </div>
       </section>
 
       <section class="play" id="play">
-        <img
-          class="play-image"
-          src="image/play/Secrion-4-How to Play (2).png"
-          alt=""
-        />
+        <h2 class="advantages-title">How to Play</h2>
 
         <div class="play__container">
           <ul class="play__list">
-            <li class="play__item">
-              <img
-                class="play__image"
-                src="./image/play/Action-01 (1).png"
-                alt=""
-              />
+            <li class="play-card">
+              <div class="play-card-image">
+                <img src="/image/play/Image.png" alt="Game Image" />
+              </div>
+              <div class="play-card-content">
+                <h3>Collect and Merge</h3>
+                <p>
+                  Collect and merge items to create new objects and build your
+                  park
+                </p>
+              </div>
             </li>
-            <li class="play__item">
-              <img
-                class="play__image"
-                src="./image/play/Action-02.png"
-                alt=""
-              />
+            <li class="play-card">
+              <div class="play-card-image">
+                <img src="/image/play/Image (2).png" alt="Game Image" />
+              </div>
+              <div class="play-card-content">
+                <h3>Complete Objectives</h3>
+                <p>
+                  Complete unique objectives and tasks on each level to
+                  progress.
+                </p>
+              </div>
             </li>
-            <li class="play__item">
-              <img
-                class="play__image"
-                src="./image/play/Action-03.png"
-                alt=""
-              />
+            <li class="play-card">
+              <div class="play-card-image">
+                <img src="/image/play/Image (3).png" alt="Game Image" />
+              </div>
+              <div class="play-card-content">
+                <h3>Use Power-Ups</h3>
+                <p>
+                  Strategically use power-ups and special items to overcome
+                  difficult sections.
+                </p>
+              </div>
             </li>
-            <li class="play__item">
-              <img
-                class="play__image"
-                src="./image/play/Action-04.png"
-                alt=""
-              />
+            <li class="play-card">
+              <div class="play-card-image">
+                <img src="/image/play/Image (4).png" alt="Game Image" />
+              </div>
+              <div class="play-card-content">
+                <h3>Plan Your Moves</h3>
+                <p>
+                  Think carefully about your moves, as the number of moves may
+                  be limited.
+                </p>
+              </div>
             </li>
-            <li class="play__item">
-              <img
-                class="play__image"
-                src="./image/play/Action-05.png"
-                alt=""
-              />
+            <li class="play-card">
+              <div class="play-card-image">
+                <img src="/image/play/Image (5).png" alt="Game Image" />
+              </div>
+              <div class="play-card-content">
+                <h3>Advance to New Levels</h3>
+                <p>
+                  Advance to higher levels with unique challenges and increasing
+                  difficulty.
+                </p>
+              </div>
             </li>
-            <li class="play__item">
-              <img
-                class="play__image"
-                src="./image/play/Action-06.png"
-                alt=""
-              />
+            <li class="play-card">
+              <div class="play-card-image">
+                <img src="/image/play/Image (6).png" alt="Game Image" />
+              </div>
+              <div class="play-card-content">
+                <h3>Join Events</h3>
+                <p>
+                  Participate in time-limited events for extra rewards and
+                  unique gameplay experiences.
+                </p>
+              </div>
             </li>
           </ul>
         </div>
-        <img
-          class="play-image-desk"
-          src="image/play/Secrion-4-How to Play.png"
-          alt=""
-        />
       </section>
     </main>
-    <section class="features" id="faq">
-      <h2 class="visually-hidden">faq</h2>
+    <section class="faq" id="faq">
+      <h2 class="advantages-title">faq</h2>
+      <div class="faq-container">
+        <div class="faq-list">
+          <div class="faq-item">
+            <div class="faq-question" onclick="toggleAnswer(this)">
+              <span>Can I play Merge Wonder Park offline?</span>
+              <button class="toggle-button">+</button>
+            </div>
+            <div class="faq-answer">
+              Generally, merge games can be played offline, but check the game
+              details for confirmation.
+            </div>
+          </div>
+          <div class="faq-item">
+            <div class="faq-question" onclick="toggleAnswer(this)">
+              <span>Is Merge Wonder Park suitable for all ages?</span>
+              <button class="toggle-button">+</button>
+            </div>
+            <div class="faq-answer">
+              Merge games are usually suitable for a wide audience, but please
+              refer to the game's content rating for specific guidance.
+            </div>
+          </div>
 
-      <div class="features__container">
-        <a href="policy.html">
-          <img
-            class="features-image"
-            src="image/faq/Secrion-5-FAQ.png"
-            alt=""
-          />
-        </a>
-        <a href="policy.html">
-          <img
-            class="features-image-desk"
-            src="image/faq/Secrion-5-FAQ (1).png"
-            alt=""
-          />
-        </a>
+          <div class="faq-item">
+            <div class="faq-question" onclick="toggleAnswer(this)">
+              <span>Are there in-app purchases in Merge Wonder Park?</span>
+              <button class="toggle-button">+</button>
+            </div>
+            <div class="faq-answer">
+              Check the game details on the Google Play Store for information
+              about in-app purchases.
+            </div>
+          </div>
+          <div class="faq-item">
+            <div class="faq-question" onclick="toggleAnswer(this)">
+              <span>How do I unlock more levels?</span>
+              <button class="toggle-button">+</button>
+            </div>
+            <div class="faq-answer">
+              Progress through the game and complete challenges to unlock
+              additional levels.
+            </div>
+          </div>
+          <div class="faq-item">
+            <div class="faq-question" onclick="toggleAnswer(this)">
+              <span>Can I compete with friends in Merge Wonder Park?</span>
+              <button class="toggle-button">+</button>
+            </div>
+            <div class="faq-answer">
+              Look for social or multiplayer features within the game that may
+              allow for competition or cooperation.
+            </div>
+          </div>
+          <div class="faq-item">
+            <div class="faq-question" onclick="toggleAnswer(this)">
+              <span>What do I do if I get stuck on a level?</span>
+              <button class="toggle-button">+</button>
+            </div>
+            <div class="faq-answer">
+              Consider using power-ups or searching online for tips and
+              strategies specific to the game.
+            </div>
+          </div>
+          <div class="faq-item">
+            <div class="faq-question" onclick="toggleAnswer(this)">
+              <span>How often is new content added to the game?</span>
+              <button class="toggle-button">+</button>
+            </div>
+            <div class="faq-answer">
+              New content, such as levels and events, is often added in regular
+              updates. Check the game's update history for patterns.
+            </div>
+          </div>
+          <div class="faq-item">
+            <div class="faq-question" onclick="toggleAnswer(this)">
+              <span>Who do I contact for support if I have an issue?</span>
+              <button class="toggle-button">+</button>
+            </div>
+            <div class="faq-answer">
+              Use the support or contact information provided in the game's
+              details on the Google Play Store or within the game's settings
+              menu.
+            </div>
+          </div>
+          <div class="faq-item">
+            <div class="faq-question" onclick="toggleAnswer(this)">
+              <span>Who do I contact for support if I have an issue?</span>
+              <button class="toggle-button">+</button>
+            </div>
+            <div class="faq-answer">
+              Use the support or contact information provided in the game's
+              details on the Google Play Store or within the game's settings
+              menu.
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
     <section class="gallery" id="gallery">
-      <img
-        class="gallery-title"
-        src="./image/gallery/Secrion-6-Gallery.png"
-        alt=""
-      />
+      <h2 class="advantages-title">gallery</h2>
 
       <div class="gallery__container">
         <ul class="gallery__list">
