--- a/policy.html
+++ b/policy.html
@@ -47,12 +47,8 @@
     <main class="policy">
       <section>
         <div class="policy-terms-container">
-          <h1 class="visually-hidden">Terms of Service</h1>
-          <img
-            class="policy-title-image"
-            src="image/policy-terms/Privacy Policy.png"
-            alt=""
-          />
+          <h1 class="policy-terms-title">Privacy Policy</h1>
+
           <p class="policy-terms-text-top-one">Last updated: 07.10.2024</p>
           <p class="policy-terms-text-top-two">
             This Privacy Policy explains how we collect, use, and share your
