--- a/terms.html
+++ b/terms.html
@@ -47,12 +47,7 @@
     <main class="policy">
       <section>
         <div class="policy-terms-container">
-          <h1 class="visually-hidden">Terms of Service</h1>
-          <img
-            class="policy-terms-title-image"
-            src="image/policy-terms/Terms and Conditions (4).png"
-            alt=""
-          />
+          <h1 class="policy-terms-title">Terms & Conditions</h1>
           <p class="policy-terms-text-top-one">Last updated: 07.10.2024</p>
           <p class="policy-terms-text-top-two">
             Thank you for choosing to play our game, available on
